# BuildSystemCourse

./: README.md
BuildSystem/: CMakeLists.txt
BuildSystem/A/: CMakeLists.txt  lib.cpp  lib.h
BuildSystem/B/: CMakeLists.txt  main.cpp  main.h
BuildSystem/C/: preparing.py
BuildSystem/doc/: Doxyfile
tmp/: readme.md
